# pico-logo

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  dist.sh  flash.sh  graphify.config.json  main.c  textcolours.html
.claude/: settings.json
.codex/: hooks.json
.github/: copilot-instructions.md
.github/prompts/: plan-explicitEvaluatorStack.prompt.md
.github/workflows/: ci.yml
.graphify/: .graphify_python  graph.html
6c/691472efcf/: metadata.json
6c/691472efcf/0/: full.jsonl  metadata.json
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_lexer
core/: bytecode.c  bytecode.h  compiler.c  compiler.h  demons.c  demons.h  error.c  error.h  eval.c  eval.h  eval_expr.c  eval_internal.h  eval_ops.c  eval_ops.h  eval_steps.c  format.c  format.h  frame.c  frame.h  frame_arena.c  frame_arena.h  frame_sync.c  frame_sync.h  help.c  help.h  httpd.c  httpd.h  lexer.c  lexer.h  limits.h  memory.c  memory.h  notation.c  notation.h  parse_list.c  parse_list.h  primitives.c  primitives.h  primitives_arithmetic.c  primitives_bitwise.c  (+50 more)
d6/7aeeb6055a/: metadata.json
d6/7aeeb6055a/0/: content_hash.txt  metadata.json
de/5f859b4769/: metadata.json
de/5f859b4769/0/: metadata.json  prompt.txt
devices/: console.c  console.h  device.c  device.h  font-8x10.h  font.h  hardware.c  hardware.h  io.c  io.h  lfs_backup.c  lfs_backup.h  lfs_storage.c  lfs_storage.h  logo-font.h  palette.h  storage.c  storage.h  storage_router.c  storage_router.h  stream.c  stream.h
devices/host/: host_console.c  host_console.h  host_device.c  host_device.h  host_file.c  host_file.h  host_hardware.c  host_hardware.h  host_main.c  host_storage.c  host_storage.h
devices/picocalc/: audio.c  audio.h  audio.pio  ca_certs.c  ca_certs.h  clib.c  costumes.c  costumes.h  dirty_tiles.c  dirty_tiles.h  editor.c  editor.h  fat32.c  fat32.h  history.c  history.h  input.c  input.h  keyboard.c  keyboard.h  lcd.c  lcd.h  lwipopts.h  main.c  mbedtls_config.h  picocalc.c  picocalc.h  picocalc_console.c  picocalc_console.h  picocalc_device.c  picocalc_device.h  picocalc_file.c  picocalc_flash.c  picocalc_flash.h  picocalc_hardware.c  picocalc_hardware.h  picocalc_lfs.c  picocalc_lfs.h  picocalc_psram.c  picocalc_psram.h  (+14 more)
devices/picocalc/tools/: gen_ca_certs.py
docs/: code-review-2026-07-02.md  galaxian-design.md  http-server-design.md  improvements-roadmap.md  launch-design.md  littlefs-filesystem-design.md  memory-reclamation-design.md  multi-sprite-design.md  sound-design.md  space-invaders-design.md
examples/: invaders.logo
grammar/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json
grammar/syntaxes/: logo.tmLanguage.json
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
graphify-out/2026-07-18/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-19/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-20/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-21/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-22/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-23/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
linker/rp2040/: memmap_default_stack_in_ram.ld
linker/rp2350/: memmap_default_stack_in_ram.ld
logo/: dark-plus.theme  dracula.theme  fileserver  github-dark.theme  graphics_tools  m1accept  m2accept  m3accept  math_tools  migrate  monokai.theme  one-dark.theme  program_tools  startup  webturtle
logo/demos/: sound
logo/games/: galaxian  invaders
logo/tests/: m1accept  m2accept  m3accept  penaccept  sndaccept
logo/themes/: ayu.theme  cobalt2.theme  darkplus.theme  default.theme  dracula.theme  github.theme  monokai.theme  onedark.theme  purple.theme  shades_of_purple.theme
reference/: Apple_Logo_II_Reference_Manual_HiRes_djvu.txt  Cleaning and Organizing the Workspace.md  Colours.md  Error_Messages.md  HTTP_Test_Plan.md  Networking_Memory_and_Storage_Notes.md  Pico_Logo_Reference.md  code-review-backlog.md  index-filter.lua
scripts/: check_reference_anchors.py  gen_palette.py  gen_palette_svg.py  generate_help.awk  generate_help.sh
tests/: CMakeLists.txt  fat32_image.c  fat32_image.h  mock_device.c  mock_device.h  mock_sdcard.c  mock_sdcard.h  test_costumes.c  test_cross_fs_move.c  test_demons.c  test_dirty_tiles.c  test_error.c  test_eval.c  test_eval_ops.c  test_fat32.c  test_fileserver.c  test_format.c  test_frame.c  test_frame_arena.c  test_frame_sync.c  test_galaxian.c  test_help.c  test_httpd.c  test_httpd_device.c  test_io.c  test_lexer.c  test_lfs_backup.c  test_lfs_storage.c  test_memory.c  test_mklfsimg.c  test_mock_device.c  test_mock_fs.h  test_notation.c  test_primitive_help_coverage.c  test_primitives_arithmetic.c  test_primitives_bitwise.c  test_primitives_conditionals.c  test_primitives_control.c  test_primitives_control_flow.c  test_primitives_debug.c  (+33 more)
tests/e2e/: basics.expected  basics.logo  errors.expected  errors.logo  help.expected  help.logo  procedures.expected  procedures.logo  run_e2e.sh
tests/mocks/hardware/: spi.h
tests/mocks/pico/: sem.h  stdlib.h
tools/: mklfsimg.c  mklfsimg.h  mklfsimg_lib.c
